# meta-mystia-manager

./: .gitignore  Cargo.toml  build.rs
shim/: api-ms-win-core-synch-l1-2-0.c  api-ms-win-core-synch-l1-2-0.def  bcryptprimitives.c  build.ps1
src/: cli_ui.rs  config.rs  console_ui.rs  downloader.rs  env_check.rs  error.rs  extractor.rs  file_ops.rs  installer.rs  main.rs  metrics.rs  model.rs  net.rs  permission.rs  shutdown.rs  temp_dir.rs  ui.rs  uninstaller.rs  updater.rs  upgrader.rs
