[package]
name = "meta-mystia-manager"
version = "1.8.2"
authors = ["AnYiEE <i@anyi.in>"]
edition = "2024"
description = "A manager for MetaMystia Mod (https://github.com/MetaMikuAI/MetaMystia). Repository: https://github.com/AnYiEE/meta-mystia-manager"
license = "AGPL-3.0-only"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
clap = { version = "4.5", features = [
  "std",
  "derive",
  "help",
  "usage",
], default-features = false }
md5 = "0.8"

# Windows API
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }

# HTTP 客户端
ureq = { version = "2.12", features = ["native-tls"], default-features = false }
native-tls = "0.2"

# URL 编码
percent-encoding = "2.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 文件系统操作
glob = "0.3"
semver = "1.0"
steamlocate = "2.0.1"

# ZIP 解压
zip = { version = "7.2", features = ["deflate"], default-features = false }

# 用户交互
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"

# 错误处理
thiserror = "2.0"

[build-dependencies]
thunk-rs = { version = "0.3", features = ["win7"], default-features = false }
winres = "0.1"

[[bin]]
name = "meta-mystia-manager"
path = "src/main.rs"
